# gsmm2-metric

./: Cargo.toml  Makefile  demo.txt
src/: aligned_pairs.rs  aligner.rs  cli.rs  global_data.rs  main.rs  msa.rs
src/metrics/: hp_metric.rs  hp_metric_v2.rs  hp_tr_metric.rs  hp_tr_metric_v2.rs  hp_tr_tools.rs  mod.rs
test_data/: ref_Saureus_ATCC25923.m.new.corrected.fasta
