[package]
name = "gsmm2-metric"
version = "0.4.0"
edition = "2024"
description = "gsmm2 metric"
license = "MIT"
repository = "https://github.com/keithyin/gsmm2-metric"
exclude = ["test_data/*"]

[dependencies]
clap = { version = "4.4", features = ["derive"] }
mm2 = "0.25.4"
num_cpus = "1.16"
hp_tr_finder = "0.3.0"
crossbeam = "0.8"
gskits = "0.15.12"
once_cell = "1"
regex = "1"
lazy_static = "1.5.0"